--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
     <!-- Global Site Tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-90714724-1"></script>
+<!--    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-90714724-1"></script>-->
 <!--
     <script>
     window.dataLayer = window.dataLayer || [];
