--- a/mms/contact.html
+++ b/mms/contact.html
@@ -33,14 +33,14 @@
         <li><span class="disabled soon"><span class="menuitem">Projects</span></span></li>
         <li><a href="about.html">The Studio</a></li>
         <li><a href="#">Contact</a></li>
-        <li><span class="icon"><a href="https://instagram.com" target="_blank"><img src="img/ig.svg"></a></span><span class="icon"><a href="https://youtube.com" target="_blank"><img src="img/ig.svg"></a></span></li>
+        <li><span class="icon"><a href="https://instagram.com" target="_blank"><img src="img/ig.svg"></a></span><span class="icon"><a href="https://youtube.com" target="_blank"><img src="img/yt.svg"></a></span><span class="icon"><a href="https://instagram.com" target="_blank"><img src="img/spot.svg"></a></span></li>
       </ul>
       <div class="close" onclick="menuMobile()"><img src="img/Cerrar.svg"/></div>
     </div>
     <header>
       <div class="nav">
         <div class="logo">
-          <img src="img/logo.svg">
+          <a href="index.html"><img src="img/logo.svg"></a>
         </div>
         <div class="burguer" onclick="menuMobile()"><img src="img/burguer.svg"/></div>
       </div>
@@ -51,7 +51,7 @@
           <li><a href="about.html">The Studio</a></li>
           <li><a href="#">Contact</a></li>
           <li><span class="subscribe" onclick="openSubscriptionBox()">Subscribe</span></li>
-          <li><span class="icon"><a href="https://instagram.com" target="_blank"><img src="img/ig.svg"></a></span><span class="icon"><a href="https://youtube.com" target="_blank"><img src="img/ig.svg"></a></span></li>
+          <li><span class="icon"><a href="https://instagram.com" target="_blank"><img src="img/ig.svg"></a></span><span class="icon"><a href="https://youtube.com" target="_blank"><img src="img/yt.svg"></a></span><span class="icon"><a href="https://instagram.com" target="_blank"><img src="img/spot.svg"></a></span></li>
         </ul>
       </div>
     </header>
