hotfix about bg img

--- a/mms/about.html
+++ b/mms/about.html
@@ -59,7 +59,7 @@
     <div id="content">
       <div id="about">
         <div id="comp-one" class="comp-one">
-          <div id="comp-one-bg" class="bg">
+          <div id="comp-one-bg-st" class="bg">
             <img src="img/AHOP2600_edit 3.png">
           </div>
           <div class="hero">
